Updated permGen handling during reactor build.